# dispersioncalc_alpha

./: Decorators.py  Exceptions.py  Logger.py  README.md  UI.py  decorators.py  isotropic_main.py  lambwave_depreciated  main.py  new.py  plot_utilities.py  pyproject.toml  requirements.txt  simpleui.py  utilities.py
material_editor/: Materials.py  imaginary_numbers.py  material_copy.txt  materials.py
materials/: Materials.py  __init__.py  imaginary_numbers.py  material_copy.txt
numerical_methods/: DataProcessor.py  Lamb.py  Plot_utilities.py  Utilities.py  isotropic_main.py  lamb_wave.py  lamb_waves.py  new.py  shear_horizontal.py  shear_horizontal_wave.py  wave_class.py
results/: .gitignore  Group Velocity - Aluminum plate - 10.0 mm.txt  Group Velocity - Default plate - 10.0 mm.txt  Phase Velocity - Aluminum plate - 10.0 mm.txt  Phase Velocity - Default plate - 10.0 mm.txt  Wavenumber - Aluminum plate - 10.0 mm.txt  Wavenumber - Default plate - 10.0 mm.txt
src/: Decorators.py  main.py
src/materials/: Materials.py  material_copy.txt
src/utility_functions/: Utilities.py
src/waves/: __init__.py
tests/: async_test.py  decorators_test.py  disassembler_test.py  example_code.py  func_example.py  imaginary_numbers_test.py  isotropic_main.py  jit_test.py  lambwave_depreciated  lambwaves.py  limit_testing.py  material_editor_test.py  test_gui_update_combo.py  test_materials.txt  validation.py
utility_functions/: Plot_utilities.py
waves/: DataProcessor.py  Lamb.py  SH.py  wave_class.py
