[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools ~=63.2.0",
    "wheel ~=0.37.1",
]

[project]
name = "dispersioncalc_alpha"
version = "1.0.0"
authors = [
    {name = "Bartłomiej Jargut", email = "dee7ine@gmail.com"},
]
description = "Desktop tool for dispersion curve analysis in guided wave testing."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
]
dependencies = [
    "numpy ~=1.24.1",
    "scipy ~=1.10.0",
    "matplotlib ~=3.6.2",
    "pandas ~=1.5.2",
    "pysimplegui ~=4.60.4",
]
